# dbgoat

./: .flake8  .gitignore  LICENCE.txt  README.md  TODO.md  pyproject.toml
dbgoat/: __init__.py  admin.py  auxiliar.py  instance.py
dbpal/: dbpal.py
tests/: test_admin.py  test_auxiliar.py  test_instance.py
tests/mysql/: CLASSIC_MODELS.sql
